--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 pool:
-  vmImage: 'windows-latest'
+  vmImage: 'windows-2016'
 steps:
 - script: |
     cd dotnet\aspnetcore\functionApp\Application\
